# romea-ros1-path

./: .gitlab-ci.yml  romea_path.rosinstall
apps/wgs84_path_matching/: CMakeLists.txt  nodelet.xml  package.xml
apps/wgs84_path_matching/src/: wgs84_path_matching.cpp  wgs84_path_matching_diagnostic.cpp  wgs84_path_matching_nodelet.cpp  wgs84_path_matching_system.cpp  wgs84_path_matching_system.hpp
msgs/: CMakeLists.txt
msgs/msg/: PathMatchedPoint2D.msg  PathMatchedPointAndTwist2D.msg  PathMatchingInfo2D.msg  PathPosture2D.msg
romea_path/: CMakeLists.txt  package.xml
romea_path/include/: Path2D.hpp  PathCurve2D.hpp  PathFrenetPose2D.hpp  PathMatchedPoint2D.hpp  PathMatching2D.hpp  PathPosture2D.hpp
romea_path/include/ros/: PathMatchingInfoConversions.hpp
romea_path/src/: Path2D.cpp  PathCurve2D.cpp  PathFrenetPose2D.cpp  PathMatchedPoint2D.cpp  PathMatching2D.cpp  PathPosture2D.cpp  WGS84Path2D.cpp
romea_path/src/ros/: PathMatchingInfoConversions.cpp
romea_path/test/: test_path.cpp  test_path_curve.cpp  test_path_curve.cpp.autosave  test_path_matching.cpp  test_utils.hpp
romea_path_apps/wgs84_path/: CMakeLists.txt  package.xml
romea_path_apps/wgs84_path/src/: wgs84_path.cpp  wgs84_path_diagnostic.hpp  wgs84_path_system.cpp  wgs84_path_system.hpp
romea_path_apps/wgs84_path_matching/: CMakeLists.txt  package.xml
romea_path_apps/wgs84_path_matching/src/: wgs84_path_matching.cpp  wgs84_path_matching_diagnostic.cpp  wgs84_path_matching_system.cpp  wgs84_path_matching_system.hpp
romea_path_matching/: CMakeLists.txt  nodelet.xml  package.xml
romea_path_matching/src/: on_the_fly_path_matching.cpp  on_the_fly_path_matching.hpp  on_the_fly_path_matching_diagnostic.cpp  on_the_fly_path_matching_diagnostic.hpp  on_the_fly_path_matching_display.cpp  on_the_fly_path_matching_display.hpp  on_the_fly_path_matching_node.cpp  on_the_fly_path_matching_nodelet.cpp  on_the_fly_path_matching_nodelet.hpp  path_file.cpp  path_file.hpp  path_matching.cpp  path_matching.hpp  path_matching_base.cpp  path_matching_base.hpp  path_matching_diagnostic.cpp  path_matching_diagnostic.hpp  path_matching_diagnostic_base.cpp  path_matching_diagnostic_base.hpp  path_matching_display.cpp  path_matching_display.hpp  path_matching_display_base.cpp  path_matching_display_base.hpp  path_matching_node.cpp  path_matching_nodelet.cpp  path_matching_nodelet.hpp  path_matching_tf.cpp  path_matching_tf.hpp
romea_path_msgs/: CMakeLists.txt  package.xml
romea_path_msgs/msg/: ENUPathMatchedPoint2D.msg  ENUPathMatchedPoint2DStamped.msg  ENUPathMatchedPointAndBodyTwist2D.msg  ENUPathMatchedPointAndBodyTwist2DStamped.msg  ENUPathPosture2D.msg  PathMatchedPoint2DStamped.msg  PathMatchedPointAndTwist2DStamped.msg  PathMatchingInfo2D.msg
romea_path_msgs/srv/: LoadPath.srv
romea_path_tools/: CMakeLists.txt  package.xml  setup.py
romea_path_tools/scripts/: bag_to_kml  planner  record
romea_path_util/: CMakeLists.txt  package.xml
romea_path_util/include/: ENUPath2D.hpp  ENUPathCurve2D.hpp  ENUPathFrenetPose2D.hpp  ENUPathMatchedPoint2D.hpp  ENUPathMatching2D.hpp  ENUPathPosture2D.hpp  PathFrenetPose2D.hpp  PathMatchedPoint2D.hpp  PathPosture2D.hpp  WGS84Path2D.hpp
romea_path_util/src/: ENUPath2D.cpp  ENUPathCurve2D.cpp  ENUPathFrenetPose2D.cpp  ENUPathMatchedPoint2D.cpp  ENUPathMatching2D.cpp  ENUPathPosture2D.cpp  PathCurve2D.cpp  PathMatchedPoint2D.cpp  PathMatching2D.cpp  WGS84Path2D.cpp
romea_path_util/test/: test_path.cpp
romea_path_util/test/data/: octave-workspace  path.txt
romea_path_utils/: CMakeLists.txt  package.xml
romea_path_utils/include/romea_path_utils/: PathFrenetPose2DConversions.hpp  PathMatchingInfoConversions.hpp  PathPosture2DConversions.hpp  path_builder.hpp  path_frenet_pose2d_conversions.hpp  path_matching_info_conversions.hpp  path_matching_point2d_conversions.hpp  path_posture2d_conversions.hpp
romea_path_utils/src/: PathFrenetPose2DConversions.cpp  PathMatchingInfoConversions.cpp  PathMatchingPoint2DConversions.cpp  PathPosture2DConversions.cpp  path_builder.cpp  path_frenet_pose2d_conversions.cpp  path_matching_info_conversions.cpp  path_matching_point2d_conversions.cpp  path_posture2d_conversions.cpp
romea_path_utils/test/: test_ros_conversion.cpp
romea_wgs84_path_matching/: CMakeLists.txt  nodelet.xml  package.xml
romea_wgs84_path_matching/src/: wgs84_path_matching.hpp  wgs84_path_matching_diagnostic.hpp  wgs84_path_matching_node.cpp  wgs84_path_matching_nodelet.cpp  wgs84_path_matching_nodelet.hpp
util/: CMakeLists.txt  package.xml
util/include/: Path2D.hpp  PathCurve2D.hpp  PathMatching2D.hpp  WGS84Path2D.hpp
util/include/ros/: MatchedPointConversions.hpp  PathMatchingInfoConversions.hpp
util/src/: Path2D.cpp  PathCurve2D.cpp  PathFrenetPose2D.cpp  PathMatching2D.cpp  PathPosture2D.cpp
util/src/ros/: MatchedPointConversions.cpp  PathMatchingInfoConversions.cpp
util/test/: test_path.cpp
