<?xml version="1.0"?>
<package format="2">
  <name>romea_path</name>
  <version>0.0.0</version>
  <description>The romea_path package</description>

  <author email="jean.laneurit@irstea.fr">Jean Laneurit</author>
  <maintainer email="jean.laneurit@irstea.fr">Jean Laneurit</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>romea_util</depend>
  <depend>romea_localisation</depend>
  <depend>romea_path_msgs</depend>

</package>
