<?xml version="1.0"?>
<package format="2">
  <name>romea_path_matching</name>
  <version>0.0.0</version>
  <description>The romea_path_matching package</description>

  <author email="jean.laneurit@inrae.fr">Jean Laneurit</author>
  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>nodelet</depend>
  <depend>romea_localisation_utils</depend>
  <depend>romea_path_utils</depend>
  <depend>romea_lifecycle</depend>

  <export>
     <nodelet plugin="${prefix}/nodelet.xml"/>
  </export>

</package>
